# honest-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: make_social_card.py
examples/: agent_lies.py  wrap_existing_agent.py
honest_agent/: __init__.py  episode.py  event_log.py  gated.py  report.py  verifiers.py
honest_agent/adapters/: __init__.py  anthropic.py  langchain.py
tests/: test_adapter_anthropic.py  test_adapter_langchain.py  test_async.py  test_chain.py  test_episode.py  test_gated.py  test_report.py  test_verifiers.py
